--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -32,6 +32,7 @@ jobs:
           mkdir dist
           cp *.html dist
           cp -r images dist
+          cp -r css dist
 
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3.0.1
